parser/tests/bad/arr04-2.st
% lower bound of an 'array' cannot be negative
%   dynamic formal

procedure p(arr: array -1..* of int)
  % empty
end procedure
